--- a/.coveragerc
+++ b/.coveragerc
@@ -6,3 +6,4 @@ exclude_lines =
     # Have to re-enable the standard pragma
     pragma: no cover
     raise NotImplementedError()
+relative_files = true
