--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,13 @@ test =
     pytest
     pytest-cov
     pandas<2
+build =
+    setuptools
+    twine
+    wheel
+pandas =
+    pandas
+dev = 
     aioboto3~=9.6.0
     aiobotocore~=2.3.0
     aiohttp~=3.8.1
