--- a/codecov.yml
+++ b/codecov.yml
@@ -9,10 +9,12 @@ coverage:
   status:
     project:
       default:
-        informational: true
+        target: auto
+        threshold: 1%
     patch:
       default:
-        informational: true
+        target: 90%
+        threshold: 1%
   precision: 2
   round: down
   range: '70...100'
