--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
           cache: "pip"
       - run: pip install '.[test]'
       - name: Lint
-        run: -|
+        run: |
           black --check uhura
           black --check tests
           flake8 --verbose uhura
@@ -41,7 +41,7 @@ jobs:
         env:
           BUILD_VERSION: ${{ github.ref_name }}
       - name: Publish to pipy
-        run: -|
+        run: |
           twine check dist/*
           twine upload dist/*
 
