--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           python-version: ${{ matrix.python_version }}
           cache: "pip"
-      - run: pip install '.[build]' '.[test]'
+      - run: pip install '.[test]'
       - name: Run tests
         run: pytest -vv --cov=uhura --cov-report=xml tests
       - uses: codecov/test-results-action@v1
@@ -54,6 +54,7 @@ jobs:
         with:
           python-version: '3.10'
           cache: "pip"
+      - run: pip install '.[build]'
       - name: Package
         run: python setup.py sdist
         env:
